# run_trend

./: .envrc  .gitignore  FLATHUB_SUBMISSION.md  FLATPAK.md  LICENSE  MANIFEST.in  MANUAL.md  MANUAL_en.md  README.md  create_windows_icon.py  de.arne-weiss.RunTrend.desktop  de.arne-weiss.RunTrend.json  de.arne-weiss.RunTrend.metainfo.xml  de.arneweiss.RunTrend.desktop  de.arneweiss.RunTrend.json  de.arneweiss.RunTrend.json.github  de.arneweiss.RunTrend.metainfo.xml  debug_hr_actual.py  debug_hr_zones.py  debug_race_predictions.py  flake.nix  pyproject.toml  python3-requirements.json  requirements.txt  specification.md  specification_update.md  verify_setup.py
.github/workflows/: build.yml  release.yml
app/: main.py
app/analytics/: aggregator.py  smoothing.py  training_score.py
app/charts/: avg_distance_chart.py  distance_chart.py  frequency_chart.py  heartrate_chart.py  longest_run_chart.py  pace_chart.py  projection_chart.py  score_chart.py  structure_overview_chart.py
app/projection/: forecaster.py
app/settings/: config.py
app/storage/: database.py
app/strava/: client.py
app/sync/: sync_manager.py
app/translations/: __init__.py  runtrend_en.qm  runtrend_en.ts
app/ui/: about_dialog.py  main_window.py  manual_dialog.py  settings_dialog.py  summary_panel.py
docs/: CNAME  index.html
run_trend/: __init__.py  __main__.py  main.py
run_trend/analytics/: aggregator.py  race_predictor.py
run_trend/charts/: avg_distance_chart.py  heartrate_chart.py  projection_chart.py
run_trend/settings/: config.py
run_trend/storage/: database.py
run_trend/strava/: client.py  simple_auth.py
run_trend/translations/: runtrend_de.qm  runtrend_de.ts
run_trend/ui/: main_window.py  manual_dialog.py  settings_dialog.py
tests/: test_analytics.py  test_heartrate.py  test_projection.py  test_race_predictor.py
