[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "run-trend"
version = "0.1.0"
description = "A desktop application for tracking and analyzing running progress from Strava"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT with Commons Clause"}
authors = [
    {name = "Arne Weiß", email = "run-trend@arne-weiss.de"}
]
keywords = ["running", "strava", "analytics", "training", "progress-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://runtrend.arne-weiss.de"
Repository = "https://github.com/smarwei/run_trend"
Issues = "https://github.com/smarwei/run_trend/issues"

[project.scripts]
run-trend = "run_trend.main:main"

[tool.setuptools]
packages = ["run_trend", "run_trend.analytics", "run_trend.charts", "run_trend.projection", "run_trend.settings", "run_trend.storage", "run_trend.strava", "run_trend.sync", "run_trend.ui", "run_trend.translations"]
include-package-data = true

[tool.setuptools.package-data]
run_trend = ["translations/*.qm", "translations/*.ts"]

[tool.briefcase]
project_name = "RunTrend"
bundle = "de.arneweiss"

[tool.briefcase.app.run-trend]
formal_name = "RunTrend"
description = "Track and analyze your running progress from Strava"
long_description = """RunTrend is a desktop application that helps runners track and analyze their progress over time. Connect your Strava account to import your running activities and visualize your improvement with detailed analytics and trend projections."""
icon = "icons/hicolor/512x512/apps/de.arneweiss.RunTrend"
sources = ["run_trend"]
requires = [
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "markdown>=3.4.0",
]

[tool.briefcase.app.run-trend.macOS]
universal_build = true
signing_identity = "-"

[tool.briefcase.app.run-trend.windows]
system_installer_resources = []
